2009-08-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-08
        * Remove references to ATLASCosmicFlags in jobOptions

2009-07-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-07
        * Minor change to CP RoI eta/phi plots

2009-07-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-06
        * Minor change to filling of CP threshold match plots

2009-06-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-05
        * Merge ROD glinkError/cmmParityError (same bit)

2009-06-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-04
        * Fixes for division by zero and vector index out of range

2009-06-12  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-03
        * Minor fix for multiple LUT slices

2009-06-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-02
        * Added Global error overview plot

2009-06-05 Joerg Stelzer <stelzer@cern.ch>
	* Removed explicit usage of LVL1ConfigSvc in share/TrigT1CaloMonitoring_forRecExCommissioning.py
	* TrigT1CaloMonitoring-00-05-00

2009-05-22  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-00
        * CP and ROD monitoring changed to new histogram directory
          structure and naming convention.

2009-05-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-18
        * Add properties to specify simulation tools in joboptions
        * Needs TrigT1CaloTools-03-00-01

2009-05-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-17
        * Restore old ROD directory name

2009-05-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-16
        * Minor updates to CPM and ROD monitoring
