@@ -1,3 +1,8 @@
+2009-09-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-05-09
+        * Add histograms of ROB status errors and bytestream unpacking
+          errors.
+
 2009-08-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-05-08
         * Remove references to ATLASCosmicFlags in jobOptions
